fixed bug: if toolbar is 'Always show' and alignment of popup is 'on the left/right side of a tab', toolbar overlaps preview

--- a/chrome/skin/classic/tabscope/overlay.css
+++ b/chrome/skin/classic/tabscope/overlay.css
@@ -121,7 +121,7 @@
 	border: none;
 }
 
-#tabscope-popup[_toolbardisplay="1"][_alignment="2"] #tabscope-preview {
+#tabscope-popup[_toolbardisplay="1"]:not([_alignment="1"]) #tabscope-preview {
 	margin-top: 22px;
 }
 
